# cpr_platform_manipulation

./: README.md
cpr_platform_manipulation/: CMakeLists.txt  package.xml
kinova_bringup/: CMakeLists.txt  package.xml
kinova_bringup/launch/: dual_gen3_bringup.launch  gen3_bringup.launch  gen3_lite_bringup.launch
