<?xml version="1.0"?>
<package format="2">
  <name>cpr_platform_manipulation</name>
  <version>0.0.0</version>
  <description>The cpr_platform_manipulation metapackage</description>

  <maintainer email="jyang@clearpathrobotics.com">Joey Yang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!--<exec_depend>kinova_description</exec_depend>-->
  <exec_depend>kinova_bringup</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
