<?xml version="1.0"?>
<package format="2">
  <name>kinova_bringup</name>
  <version>0.0.0</version>
  <description>The kinova_bringup package</description>

  <maintainer email="jyang@clearpathrobotics.com">Joey Yang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>kortex_driver</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
